// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`démarre la partie 1`] = `
Object {
  "chiffreCourant": 15,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 40,
      "touches": Object {},
    },
    Object {
      "joueur": "J2",
      "points": 40,
      "touches": Object {},
    },
  ],
}
`;

exports[`inscrit un joueur 1`] = `
Object {
  "joueurs": Array [
    "J1",
  ],
  "lanceur": undefined,
  "phase": "INSCRIPTION",
  "scores": Array [],
}
`;

exports[`note une volée 1`] = `
Object {
  "chiffreCourant": 15,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J2",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 55,
      "touches": Object {
        "15": 1,
      },
    },
    Object {
      "joueur": "J2",
      "points": 40,
      "touches": Object {},
    },
  ],
}
`;

exports[`note une volée 2`] = `
Object {
  "chiffreCourant": 16,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 55,
      "touches": Object {
        "15": 1,
      },
    },
    Object {
      "joueur": "J2",
      "points": 70,
      "touches": Object {
        "15": 2,
      },
    },
  ],
}
`;

exports[`retourne le state initial 1`] = `
Object {
  "joueurs": Array [],
  "lanceur": undefined,
  "phase": "INSCRIPTION",
  "scores": Array [],
}
`;
